JumpScript/tests/baselines/reference/unusedClassesinNamespace2.errors.txt
tests/cases/compiler/unusedClassesinNamespace2.jump(2,11): error TS6133: 'c1' is declared but its value is never read.


==== tests/cases/compiler/unusedClassesinNamespace2.jump (1 errors) ====
    namespace Validation {
        class c1 {
              ~~
!!! error TS6133: 'c1' is declared but its value is never read.
    
        }
    
        export class c2 {
    
        }
    }